# gr-sleipnir

./: .editorconfig  .flake8  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASE_NOTES_v1.0.md  TEST_RESULTS.md  create_test_archive.sh
docs/: APRS_TEXT_MESSAGING.md  BLOCK_USAGE_GUIDE.md  CHANNEL_THRESHOLDS.md  CRYPTO_INTEGRATION.md  CRYPTO_WIRING.md  FER_TRACKING.md  GR_LINUX_CRYPTO_VERIFICATION.md  SUPERFRAME_IMPLEMENTATION.md  SYNC_FRAME_ANALYSIS.md  SYNC_FRAME_IMPLEMENTATION.md  TECHNICAL_GLOSSARY.md  TEST_RESULTS.md
examples/: PTT_METHODS.md  README_EXAMPLES.md  SLEIPNIR_RX_MODULE.md  SLEIPNIR_TX_MODULE.md  SUPERFRAME_FLOWGRAPHS.md  SUPERFRAME_INTEGRATION.md  avaible-blocks.grc  rx_4fsk_opus.grc  rx_8fsk_opus.grc  sleipnir_rx_basic.grc  sleipnir_rx_verified.grc  sleipnir_rx_zmq.grc  sleipnir_tx_basic.grc  sleipnir_tx_encrypted.grc  sleipnir_tx_ptt.grc  som_4fsk_file.grc  som_4fsk_file_voice_test.grc  som_4fsk_nfm_ptt.grc  som_8fsk_file.grc  som_8fsk_nfm_ptt.grc  som_superframe_4fsk.grc  tx_4fsk_opus.grc  tx_8fsk_opus.grc
examples/ldpc_matrices/: ldpc_rate23.alist  ldpc_rate34.alist
gr-opus/: CMakeLists.txt  LINTING_RESULTS.md  README.md  setup.py  test-results.md
gr-opus/examples/: opus_encode_decode_example.py  opus_file_example.py
gr-opus/grc/: CMakeLists.txt  gr_opus_opus_decoder.block.yml  gr_opus_opus_encoder.block.yml
gr-opus/python/: CMakeLists.txt  __init__.py  opus_decoder.py  opus_encoder.py
gr-opus/tests/: CMakeLists.txt  README.md  __init__.py  qa_opus_decoder.py  qa_opus_encoder.py  qa_opus_roundtrip.py
grc/: CMakeLists.txt  sleipnir_decoder.block.yml  sleipnir_deframer.block.yml  sleipnir_encoder.block.yml  sleipnir_framer.block.yml  sleipnir_rx_hier.block.yml  sleipnir_tx_hier.block.yml
ldpc_matrices/: NOTE.md  README.md  README_SUMMARY.md  SUPERFRAME_LDPC.md  create_custom_ldpc.py  ldpc_auth_1536_512.alist  ldpc_auth_768_256.alist  ldpc_voice_576_384.alist  n_0576_k_0386_gap_01.alist  n_0768_k_0515_gap_15.alist  n_0768_k_0515_gap_18.alist
prompt/: prompt.md
python/: CMakeLists.txt  README_RX_MODULE.md  README_SUPERFRAME.md  README_TX_MODULE.md  __init__.py  crypto_helpers.py  crypto_integration.py  example_superframe_tx.py  frame_aware_ldpc.py  frame_aware_ldpc_decoder_router.py  frame_aware_ldpc_decoder_to_pdu.py  frame_aware_ldpc_router.py  frame_splitter_router.py  fsk_symbol_to_llr.py  ldpc_decoder_to_pdu.py  ldpc_utils.py  message_forwarder.py  opus_frame_packetizer.py  ptt_control_integration.py  ptt_gpio.py  ptt_network.py  ptt_serial.py  ptt_vox.py  sleipnir_rx_block.py  sleipnir_rx_hier.py  sleipnir_superframe_assembler.py  sleipnir_superframe_parser.py  sleipnir_tx_block.py  sleipnir_tx_hier.py  superframe_controller.py  tagged_stream_to_pdu_custom.py  voice_frame_builder.py  zmq_control_helper.py  zmq_status_output.py
test-results-files/: phase2.json  phase3.json  summary.json
test-results-files/analysis/: ANALYSIS_SUMMARY.md  audio_quality_analysis.md  channel_validation.md  comparative_analysis.md  coverage_report.md  deployment_scenarios.md  failure_analysis.md  fer_floor_analysis.md  performance_summary.md  power_range_calculator.md  roadmap.md  statistics_tables.md  technical_analysis.md  waterfall_characterization.md  what_if_scenarios.md
test-results-files/analysis_complete/: 4fsk_complete_analysis.json  4fsk_vs_8fsk_comparison.json  8fsk_baseline_analysis.json  MULTI_RECIPIENT_OVERHEAD.md  PERFORMANCE_REPORT.md  VOICE_VS_VOICE_TEXT_COMPARISON.md  WATERFALL_SNR_ANALYSIS.md  WATERFALL_SNR_SUMMARY.md
test-results-files/analysis_now/: 4fsk_summary.json  8fsk_baseline_summary.json  ANALYSIS_REPORT.md  comparison_summary.json
test-results-files/final_analysis/: 8fsk_complete.json  phase_comparison.json  test_durations.json  voice_vs_voice_text.json
test-results-json/: results.json
test_results_comprehensive/: all_results.json  results_intermediate.json  results_summary.csv
test_results_comprehensive/report/: README.md  pass_fail_report.txt  summary_report.txt
test_results_comprehensive/test_0001/: result.json
test_results_comprehensive/test_0002/: result.json
test_results_comprehensive/test_0003/: result.json
test_results_comprehensive/test_0004/: result.json
test_results_comprehensive/test_0005/: result.json
test_results_comprehensive/test_0006/: result.json
test_results_comprehensive/test_0007/: result.json
test_results_comprehensive/test_0008/: result.json
test_results_comprehensive/test_0009/: result.json
test_results_comprehensive/test_0010/: result.json
test_results_comprehensive/test_0011/: result.json
test_results_comprehensive/test_0012/: result.json
test_results_comprehensive/test_0013/: result.json
test_results_comprehensive/test_0014/: result.json
test_results_comprehensive/test_0015/: result.json
test_results_comprehensive/test_0016/: result.json
test_results_comprehensive/test_0017/: result.json
test_results_comprehensive/test_0018/: result.json
test_results_comprehensive/test_0019/: result.json
test_results_comprehensive/test_0020/: result.json
tests/: FER_COMPARISON_GUIDE.md  INTEGRATION_TESTS.md  README.md  README_FER_COMPARISON.md  README_TESTING.md  TEST_SCENARIOS.md  TEST_SUMMARY.md  VERIFY_ALL_TESTS.md  analyze_complete_phase3.py  analyze_phase3_now.py  analyze_results.py  check_batch1.sh  check_phase2_status.py  config.yaml  config_comprehensive.yaml  config_high_snr.yaml  diagnose_failures.py  diagnose_grc_blocks.py  fix_signature_data.py  flowgraph_builder.py  generate_comprehensive_analysis.py  generate_report.py  metrics_collector.py  monitor_phase2.py  rerun_signature_tests.py  rerun_signature_verification.py  run_all_functionality_tests.sh  run_all_tests.py  run_critical_tests.sh  test_actual_code_exercise.py  test_aprs_injection.py  test_aprs_text_messaging.py  test_backward_compatibility.py  test_cleanup_fix.py  test_comprehensive.py  test_critical_functionality.py  test_crypto_functionality.py  test_crypto_key_sources.py  test_encryption_switching.py  test_flowgraph_rx_compatibility.grc  (+16 more)
tests/test_keys/: private.pem  public.pem
(+84 files in other folders)
